--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,24 +47,25 @@ header nav ul {
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 
 footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -79,28 +80,43 @@ section {
 
 .hero {
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.hero-cta {
+    width: 35%;
+    text-align:  right;
+    margin: 3.5%;
+    color: #fff;
+    font-size:  18px;
+    line-height: 1.3;
 }
 
 .hero-form{
     background-color: #fce138;
     color: #024e76;
     padding: 20px;
-    width: 500px;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 40%;
+    margin: 3.5%;
     /*
     border short hand:
     border: solid 3px #024e76;
     */
 }
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
+
 .hero-form h3 {
     font-size: 24px;
     margin: 0;
