--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
 }
 
 header h1 {
@@ -25,6 +32,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 
 header a {
@@ -48,7 +56,17 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+}
+
+
 
 footer {
     background: #fce138;
@@ -81,7 +99,8 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 80%;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -98,7 +117,7 @@ section {
 }
 
 .hero-form{
-    background-color: #fce138;
+    background-color: rgba(252,225, 56, 0.8);
     color: #024e76;
     padding: 20px;
     border-style: solid;
@@ -106,6 +125,8 @@ section {
     border-color: #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
     /*
     border short hand:
     border: solid 3px #024e76;
@@ -116,6 +137,7 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 
 .hero-form h3 {
@@ -135,6 +157,13 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255,255,255,1);
+    outline: none;
 }
 
 .hero-form label {
@@ -147,6 +176,11 @@ section {
     padding: 10px 20px;
     background-color: #024e76;
     border: none;
+    border-radius: 10px;
+}
+
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 
 .intro p {
@@ -172,6 +206,12 @@ section {
     align-items: center;
     justify-content: space-between;
 }
+
+.step:last-child {
+    border-bottom: none;
+}
+
+
 
 .section-title {
     font-size: 48px;
@@ -326,6 +366,13 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus{
+    background-color:rgba(255,255,255,1);
+    outline: none;
 }
 
 .contact-form button {
@@ -336,6 +383,12 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 
 
@@ -352,6 +405,7 @@ section {
       header {
           padding-bottom: 0;
           justify-content: center;
+          position: relative;
       }
 
       header h1 {
